--- a/src/Taboo/MainBundle/Resources/views/Main/index.html.twig
+++ b/src/Taboo/MainBundle/Resources/views/Main/index.html.twig
@@ -2,6 +2,18 @@
 
 {% block body %}
 
-Main body
+<div class="row-fluid">
+    
+    <div class="span2">       
+        <section id="hero">Side nav</section>
+    </div>
+    
+    <div class="span10">
+        <section id="main-content">
+            Main taboo content
+        </section>
+    </div>
+
+</div>
 
 {% endblock %}
