Added bootstrap and updated main template

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,9 +26,9 @@
                     <div class="navbar navbar-inverse">
                         <div class="navbar-inner">
                             <ul class="nav">
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">Link1</a></li>
-                                <li><a href="#">Link2</a></li>
+                                <li class="active"><a href="#">Browse Tabs</a></li>
+                                <li><a href="#">Top Composers</a></li>
+                                <li><a href="#">Help</a></li>
                             </ul>
                         </div>
                     </div>
