--- a/src/Taboo/MainBundle/Resources/views/Main/index.html.twig
+++ b/src/Taboo/MainBundle/Resources/views/Main/index.html.twig
@@ -4,13 +4,15 @@
 
 <div class="row-fluid">
     
-    <div class="span2">       
-        <section id="hero">Side nav</section>
-    </div>
-    
-    <div class="span10">
-        <section id="main-content">
-            Main taboo content
+    <div class="span12">
+        <section class="hero-unit">
+            <h1>What is Tab-oo?</h1>
+            <p>Tab-oo is an online tablature composing and consuming tool for people who love string instruments!</p>
+            <p>
+                <a class="btn btn-primary btn-large">
+                    Learn More
+                </a>
+            </p>
         </section>
     </div>
 
