Started encoding/decoding.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,6 +11,7 @@
             <link rel="stylesheet" href="{{ asset_url }}">
             
         {% endstylesheets %}
+            {% block head %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
     </head>
     <body>
