Worked some more on the composer. Found a linear regression function that will be useful for drawing the connecting lines of groups of 8th notes, etc. Added KineticJS, which will be very useful.

--- a/src/Taboo/MainBundle/Resources/public/css/composer.css
+++ b/src/Taboo/MainBundle/Resources/public/css/composer.css
@@ -1,7 +1,11 @@
-#composerCanvas {
-    width: 100%;
-    height: 50%;
+#composerDiv {
     border: 1px solid black;
+}
+
+#composerCanvas {
+    width: 900px;
+    height: 200px;
+    background: #F0F0F0;
 }
 
 #jsonText {
