Fixed composer. Almost back to where I was, only with proper classes.

--- a/src/Taboo/MainBundle/Resources/public/css/composer.css
+++ b/src/Taboo/MainBundle/Resources/public/css/composer.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: MusiSync;
+    src : url(/taboo/web/fonts/MusiSync.ttf);
+}
+
 #composerDiv {
     border: 1px solid black;
 }
