--- a/web/css/3162f1a_composer_1.css
+++ b/web/css/3162f1a_composer_1.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: MusiSync;
+    src : url(/taboo/web/fonts/MusiSync.ttf);
+}
+
 #composerDiv {
     border: 1px solid black;
 }
