--- a/src/Taboo/MainBundle/Resources/views/Main/index.html.twig
+++ b/src/Taboo/MainBundle/Resources/views/Main/index.html.twig
@@ -5,47 +5,14 @@
 {% block javascripts %}
 
 <script>
-$('#signUpButton').click(function() {
-    $('#myModal').fadeIn();
-});
 
-$('.close').click(function() {
-   $('#myModal').fadeOut();  
-});
 </script>
 
 {% endblock %}
 
-<div class="row-fluid">
-    
-    <div class="span12">
-        <section class="hero-unit">
-            <h1>What is Tab-oo?</h1>
-            <p>Tab-oo is an online tablature composing and consuming tool for people who love string instruments!</p>
-            <p>
-                <a class="btn btn-primary btn-large">
-                    Learn More
-                </a>
-                
-                <a class="btn btn-success btn-large" id="signUpButton">Sign Up</a>​
-                
-                <div class="modal hide" id="myModal">
-                    <div class="modal-header">
-                        <button class="close">x</button>
-                        <h3>Modal header</h3>
-                    </div>
-                    <div class="modal-body">
-                        <p>One fine body…</p>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#" class="btn close">Close</a>
-                        <a href="#" class="btn btn-primary">Save changes</a>
-                    </div>
-                </div>
-            </p>
-        </section>
-    </div>
-
-</div>
+    <section>
+        <h1>What is Tab-oo?</h1>
+        <p>Tab-oo is an online tablature composing and consuming tool for people who love string instruments!</p>
+    </section>
 
 {% endblock %}
